Fix Spacing

--- a/style.css
+++ b/style.css
@@ -1762,7 +1762,7 @@
   .row2 {
     display: flex;
     justify-content: center;
-    margin-top: 300px;
+    margin-top: 100px;
     width: 100%;
     gap: 5px;
     margin-left: -100px;
